<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck"
    tools:context=".uitasarim.HomeScreenFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/view_more_textPop"
        android:layout_width="68dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:gravity="top"
        android:text="@string/view_more_text"
        android:textAppearance="@style/view_more_text"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewRestaurant2" />

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="229dp"
        android:layout_height="149dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="233dp"
        android:layout_height="82dp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo"
        android:gravity="top"
        android:text="@string/title_textView"
        android:textAppearance="@style/title_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextSearch"
        android:layout_width="262dp"
        android:layout_height="47dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_search"
        android:drawableLeft="@drawable/ic_search"
        android:hint="@string/input_arama_text"
        android:textColorHint="@color/search_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="134dp"
        android:layout_height="158dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconnotification" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filter_icon"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_search"
        android:isScrollContainer="false"
        app:cornerRadius="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="20dp"
        android:drawableRight="@drawable/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextSearch"
        app:layout_constraintTop_toTopOf="@+id/editTextTextSearch" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPano"
        android:layout_width="339dp"
        android:layout_height="158dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#15be77"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextSearch">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cardimage" />

            <ImageView
                android:id="@+id/imageViewBgimage"
                android:layout_width="322dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/imagecard" />

            <TextView
                android:id="@+id/pano_title"
                android:layout_width="152dp"
                android:layout_height="51dp"

                android:layout_marginTop="30dp"
                android:fontFamily="@font/baloo"
                android:text="@string/card_title"
                android:textAppearance="@style/card_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_buy"
                android:layout_width="105dp"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/white"
                android:text="Buy Now"
                android:textAllCaps="false"
                android:textColor="@color/text"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/imageViewBG"
                app:layout_constraintTop_toBottomOf="@+id/pano_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nearest_textView"
        android:layout_width="143dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/baloo"
        android:gravity="top"
        android:text="@string/nearest_text"
        android:textAppearance="@style/nearest_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPano" />


    <TextView
        android:id="@+id/view_more_textView"
        android:layout_width="68dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/view_more_text"
        android:textAppearance="@style/view_more_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPano" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRestaurant"
        android:layout_width="147dp"
        android:layout_height="184dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearest_textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/resimage" />

            <TextView
                android:id="@+id/res_name"
                android:layout_width="97dp"
                android:layout_height="21dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/baloo"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:text="@string/res_name"
                android:textAppearance="@style/res_name"
                android:translationY="-2.4sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <TextView
                android:id="@+id/min"
                android:layout_width="80dp"
                android:layout_height="17dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="24dp"
                android:alpha="0.5"
                android:lineSpacingExtra="4sp"
                android:text="@string/min"
                android:textAlignment="center"
                android:textAppearance="@style/min"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/res_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRestaurant2"
        android:layout_width="147dp"
        android:layout_height="184dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewRestaurant"
        app:layout_constraintTop_toBottomOf="@+id/view_more_textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="89dp"
                android:layout_height="71dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/res2image" />

            <TextView
                android:id="@+id/resto_name"
                android:layout_width="103dp"
                android:layout_height="21dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/baloo"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:text="@string/res2_name"
                android:textAppearance="@style/res2_name"
                android:translationY="-2.4sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <TextView
                android:id="@+id/min2"
                android:layout_width="40dp"
                android:layout_height="17dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:gravity="top"
                android:text="@string/min2"
                android:textAppearance="@style/min2"
                android:translationY="-1.95sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resto_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/pop_text"
        android:layout_width="102dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/baloo"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/pop_text"
        android:textAppearance="@style/pop_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewRestaurant" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="329dp"
        android:layout_height="103dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_text"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPoppuler"
                android:layout_width="324dp"
                android:layout_height="88dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/menu_name"
                        app:srcCompat="@drawable/pop_image" />

                    <TextView
                        android:id="@+id/menu_name"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/baloo"
                        android:gravity="top"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/menu_name"
                        android:textAppearance="@style/menu_name"
                        app:layout_constraintStart_toEndOf="@+id/imageView13"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="51dp"
                        android:layout_height="42dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="90dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="30dp"
                        android:gravity="top"
                        android:text="@string/price"
                        android:textAppearance="@style/price"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.342"
                        app:layout_constraintStart_toEndOf="@+id/menu_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/restaurant_name"
                        android:layout_width="98dp"
                        android:layout_height="21dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="top"
                        android:text="@string/restaurant_name"
                        android:textAppearance="@style/restaurant_name"
                        app:layout_constraintStart_toEndOf="@+id/imageView13"
                        app:layout_constraintTop_toBottomOf="@+id/menu_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
