<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:context=".uitasarim.SignScreenFragment"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="311dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="  Password"
            android:inputType="textPersonName"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <ImageView
            android:id="@+id/imageViewBackGround"
            android:layout_width="393dp"
            android:layout_height="329dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pattern" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewBackGround"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/foodninja"
            android:layout_width="188dp"
            android:layout_height="54dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/viga"
            android:gravity="top"
            android:text="@string/foodninja"
            android:textAppearance="@style/foodninja"
            android:textColor="#53E88B"
            android:textCursorDrawable="@drawable/bg_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

        <TextView
            android:id="@+id/deliever_fa"
            android:layout_width="162dp"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/inder"
            android:gravity="top"
            android:text="@string/deliever_fa"
            android:textAppearance="@style/deliever_fa"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodninja" />

        <TextView
            android:id="@+id/text"
            android:layout_width="217dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal|top"
            android:text="@string/text"
            android:textAppearance="@style/text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodninja" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="311dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="  Email"
            android:inputType="textPersonName"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <TextView
            android:id="@+id/continueText"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="8sp"
            android:text="@string/by_tapping_"
            android:textAppearance="@style/by_tapping_"
            android:textStyle="bold"
            android:translationY="-3.93sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFacebook"
            android:layout_width="119dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueText">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="Facebook"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.48" />

                <ImageView
                    android:id="@+id/imageViewFacLogo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"

                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="13dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewFacebook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/facebook" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardGoogle"
            android:layout_width="119dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rectangle"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueText">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewgoogle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"

                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:id="@+id/googleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="Google"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewgoogle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.52" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="8sp"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass"
            android:textColor="@color/text"
            android:translationY="-3.93sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardFacebook" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonlogin"
            android:layout_width="154dp"
            android:layout_height="53dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_btn_primary"
            android:backgroundTint="@null"
            android:text="@string/login_name"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardFacebook" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>